# FG

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  __init__.py  audio.py  constants.py  diplomacy.py  fantaisie.spec  main.py  pyproject.toml  pytest.ini  settings.json  settings.py  siege.py  theme.py  weather.py
assets/: ai_difficulty.json  artifacts.json  biome_compatibility.json  boats.json  fortifications.json  skills.json  town_buildings.json  units_boss.json
core/: __init__.py  abilities.py  auto_resolve.py  bosses.py  buildings.py  combat.py  combat_ai.py  combat_render.py  combat_rules.py  combat_screen.py  economy.py  entities.py  exploration_ai.py  faction.py  fx.py  game.py  resistances.py  spell.py  status_effects.py  status_utils.py  vfx_manifest.py  vision.py  world.py
docs/: asset_manifests.md  biome_compatibility.md  contributor_guide.md  map_format.md  modding_guide.md  save_format.md  strategic_modules_design.md  test_durations.md  town_screen.md  unit_creature_schema.md
events/: __init__.py  events.json  handlers.py
graphics/: __init__.py  particle_fx.py  scale.py  spritesheet.py
loaders/: asset_manager.py  audio_loader.py  battlefield_loader.py  biomes.py  boat_loader.py  boss_loader.py  building_loader.py  core.py  faction_loader.py  flora_loader.py  hero_loader.py  i18n.py  icon_loader.py  resources_loader.py  scenario_loader.py  town_building_loader.py  town_scene_loader.py  units_loader.py
mapgen/: __init__.py  biology.py  continents.py  generate_continent_map.py
render/: autotile.py  world_renderer.py  (+1 more)
(+285 files in other folders)
